--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -22,6 +22,10 @@
   </form>
   <h2>Your Meetings</h2>
   <div class="meeting" ng-repeat="(key, meeting) in meetings">
+  <button class="btn btn-delete tooltip"
+    ng-click="deleteMeeting(key)">
+    <span>Delete thsi meeting</span>
+    </button>
   		<span class="text">{{meeting.name}}</span>
   </div>
 
