added new style.css and event tracking from firebase

--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -12,7 +12,7 @@
 
     <div class="inputwrapper">
       <input type="text" name="meetingname"
-      placeholder="Meeting name"
+      placeholder="Meeting Name..."
       ng-model="meetingname" ng-required="true">
     </div>
 
