added checkins view

--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -24,7 +24,7 @@
   <div class="meeting" ng-repeat="(key, meeting) in meetings">
   <button class="btn btn-delete tooltip"
     ng-click="deleteMeeting(key)">
-    <span>Delete thsi meeting</span>
+    <span>Delete this meeting</span>
     </button>
   		<span class="text">{{meeting.name}}</span>
   </div>
