--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -26,6 +26,9 @@
     ng-click="deleteMeeting(key)">
     <span>Delete this meeting</span>
     </button>
+    <a class="btn btn-checkin tooltip"
+      href="#/checkins/{{currentUser.regUser}}/{{meeting.$id}}">
+      <span>Go to check-in URL</span></a>
   		<span class="text">{{meeting.name}}</span>
   </div>
 
