change meetings to events

--- a/builds/development/views/checkins.html
+++ b/builds/development/views/checkins.html
@@ -4,8 +4,9 @@
     novalidate>
 
     <div class="textintro">
-      <h1>Check-in</h1>
-      <p>Fill out this form to check-in to this meeting</p>
+      <h1>Check-ins</h1>
+      <p>({{theevent}})</p>
+      <p>Fill out this form to check-in to this event</p>
       <p class="message" ng-show="message">{{ message }}</p>
     </div>
 
